--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "dependencies": {
     "next": "12.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "swr": "^1.0.1"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "16.11.7",
